--- a/src/CalcUI.form
+++ b/src/CalcUI.form
@@ -186,7 +186,7 @@
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="99466" class="javax.swing.JTextArea" binding="bruhTextArea" default-binding="true">
+      <component id="99466" class="javax.swing.JTextArea" binding="bruhTextArea" custom-create="true" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
