--- a/src/CalcUI.form
+++ b/src/CalcUI.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="CalcUI">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1168" height="596"/>
+      <xy x="20" y="20" width="700" height="464"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="e3cbf" class="javax.swing.JButton" binding="a0Button" default-binding="true">
+      <component id="e3cbf" class="javax.swing.JButton" binding="Num0">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -16,7 +16,7 @@
           <text value="0"/>
         </properties>
       </component>
-      <component id="3ce83" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="3ce83" class="javax.swing.JButton" binding="Decimal">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -24,7 +24,7 @@
           <text value="."/>
         </properties>
       </component>
-      <component id="a4fe6" class="javax.swing.JButton" binding="a2Button" default-binding="true">
+      <component id="a4fe6" class="javax.swing.JButton" binding="Num2">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,7 +32,7 @@
           <text value="2"/>
         </properties>
       </component>
-      <component id="f1dd6" class="javax.swing.JButton" binding="a1Button" default-binding="true">
+      <component id="f1dd6" class="javax.swing.JButton" binding="Num1">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -40,27 +40,7 @@
           <text value="1"/>
         </properties>
       </component>
-      <component id="82ae5" class="javax.swing.JButton" binding="a5Button" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="78" height="100"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="5"/>
-        </properties>
-      </component>
-      <component id="152f9" class="javax.swing.JButton" binding="a4Button" default-binding="true">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="78" height="100"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="4"/>
-        </properties>
-      </component>
-      <component id="d148e" class="javax.swing.JButton" binding="a8Button" default-binding="true">
+      <component id="d148e" class="javax.swing.JButton" binding="Num8">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -68,7 +48,7 @@
           <text value="8"/>
         </properties>
       </component>
-      <component id="d6b06" class="javax.swing.JButton" binding="a7Button" default-binding="true">
+      <component id="d6b06" class="javax.swing.JButton" binding="Num7">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -76,7 +56,7 @@
           <text value="7"/>
         </properties>
       </component>
-      <component id="54815" class="javax.swing.JButton" binding="a9Button" default-binding="true">
+      <component id="54815" class="javax.swing.JButton" binding="Num9">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -84,17 +64,7 @@
           <text value="9"/>
         </properties>
       </component>
-      <component id="69cce" class="javax.swing.JButton" binding="a6Button" default-binding="true">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="78" height="100"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="6"/>
-        </properties>
-      </component>
-      <component id="350d5" class="javax.swing.JButton" binding="a3Button" default-binding="true">
+      <component id="350d5" class="javax.swing.JButton" binding="Num3">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -102,7 +72,7 @@
           <text value="3"/>
         </properties>
       </component>
-      <component id="1c0fa" class="javax.swing.JButton" binding="button12" default-binding="true">
+      <component id="1c0fa" class="javax.swing.JButton" binding="Equals">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -110,7 +80,7 @@
           <text value="="/>
         </properties>
       </component>
-      <component id="d2ae1" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="d2ae1" class="javax.swing.JButton" binding="Add">
         <constraints>
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -118,17 +88,7 @@
           <text value="+"/>
         </properties>
       </component>
-      <component id="98eaf" class="javax.swing.JButton" binding="button3" default-binding="true">
-        <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="78" height="100"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="-"/>
-        </properties>
-      </component>
-      <component id="dae18" class="javax.swing.JButton" binding="xButton" default-binding="true">
+      <component id="dae18" class="javax.swing.JButton" binding="Multiply">
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -136,7 +96,7 @@
           <text value="x"/>
         </properties>
       </component>
-      <component id="93784" class="javax.swing.JButton" binding="button5" default-binding="true">
+      <component id="93784" class="javax.swing.JButton" binding="Divide">
         <constraints>
           <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -147,13 +107,6 @@
       <vspacer id="a92a1">
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="88cc">
-        <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="11" height="100"/>
-          </grid>
         </constraints>
       </vspacer>
       <vspacer id="b7c46">
@@ -186,14 +139,59 @@
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="99466" class="javax.swing.JTextArea" binding="bruhTextArea" custom-create="true" default-binding="true">
+      <component id="99466" class="javax.swing.JTextArea" binding="TextArea" custom-create="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Bruh"/>
+          <text value="Welcome to Calculator!"/>
+        </properties>
+      </component>
+      <component id="1d30d" class="javax.swing.JButton" binding="Num4">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="4"/>
+        </properties>
+      </component>
+      <component id="d5601" class="javax.swing.JButton" binding="Num5">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="5"/>
+        </properties>
+      </component>
+      <component id="38db7" class="javax.swing.JButton" binding="Num6">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="6"/>
+        </properties>
+      </component>
+      <component id="548ca" class="javax.swing.JButton" binding="button4" default-binding="true">
+        <constraints>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Button"/>
+        </properties>
+      </component>
+      <vspacer id="1169b">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="14b00" class="javax.swing.JButton" binding="Clear">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Clear"/>
         </properties>
       </component>
     </children>
